--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,26 @@
 <!-- BEGIN HEADER -->
-{{> headers/header-login}} 
+{{> headers/header-login}}
 <!-- END  HEADER -->
 
 <div class="container">
   <div class="row">
-    <div class="col-12">
+    <div class="col-lg-6">
 
       <h2>Register</h2>
+      <form class="create-form" method="POST" action="/register">
+        <div class="form-group">
+          <label for="username">Signup with a Username or Email Address</label>
+          <input type="text" id="js-register-usernameField" class="form-control" aria-describedby="Username or Email Address" placeholder="Username or Email Address"
+            name="name">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label for="pw">Password</label>
+          <input type="password" class="form-control" id="js-register-passwordField" name="pw" placeholder="Password">
+        </div>
+        <button type="submit" id="js-register-submitButton" class="btn btn-primary">Register</button>
+      </form>
+      <!--
       <form class="create-form" method="POST" action="/register">
 
         <div class="form-group">
@@ -22,14 +36,26 @@
 
         <button type="submit" id="js-register-submitButton">Register!</button>
       </form>
+      -->
 
-      <div id="js-homepage-register-message">
+      <div id="js-homepage-register-message"></div>
 
-      </div>
+    </div>
+    <div class="col-lg-6">
 
-
-
-      <h2>Login</h2>
+      <h2 class="login-header">Login</h2>
+      <form class="create-form" method="GET" action="/dashboard">
+        <div class="form-group">
+          <label for="username">Login with your Username or Email Address</label>
+          <input type="text" id="js-login-usernameField" class="form-control"  aria-describedby="Username or Email Address" placeholder="Username or Email Address" name="name">
+        </div>
+        <div class="form-group">
+          <label for="pw">Password</label>
+          <input type="password" id="js-login-passwordField"  class="form-control" name="pw" placeholder="Password">
+        </div>
+        <button type="submit" id="js-login-submitButton" class="btn btn-primary">Login</button>
+      </form>
+      <!--
       <form class="create-form" method="GET" action="/dashboard">
 
         <div class="form-group">
@@ -45,9 +71,9 @@
 
         <button type="submit" id="js-login-submitButton">Login</button>
       </form>
+      -->
 
     </div>
   </div>
 </div>
 <!-- END CONTENT -->
-
