compiled css with sass and added sass files to gitignore

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,365 +1,1 @@
-/* GLOBAL PAGE ELEMENTS */
-
-html,
-body {
-  box-sizing: border-box;
-  font-family: monospace, 'Times New Roman', Times, serif;
-}
-
-a {
-  color: red;
-}
-
-a:hover {
-  color: maroon;
-  text-decoration: none;
-}
-
-/* HEADER */
-
-.jumbotron {
-  background-color: transparent;
-}
-
-header.header-subpage .jumbotron {
-  padding: 1rem 2rem 4rem;
-}
-
-header {
-  background: url("../images/bg-crumpled-paper.jpg");
-  background-color: bisque;
-  position: relative;
-}
-
-.logout {
-  margin-top: 2rem;
-}
-
-.logout form button {
-  background-color: bisque;
-  padding: .5rem;
-  border-radius: .25rem;
-}
-
-/* FORM ELEMENTS */
-
-.btn-primary {
-  color: #fff;
-  background-color: brown;
-  border-color: brown;
-}
-
-.btn-primary:hover {
-  color: #fff;
-  background-color: darkred;
-  border-color: darkred;
-}
-
-.btn-primary:not(:disabled):not(.disabled).active,
-.btn-primary:not(:disabled):not(.disabled):active,
-.show>.btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: darkred;
-  border-color: darkred;
-}
-
-.btn-primary.focus,
-.btn-primary:focus {
-  box-shadow: 0 0 0 0.2rem rgba(165, 42, 42, .5);
-}
-
-.btn-primary.disabled,
-.btn-primary:disabled {
-  color: #fff;
-  background-color: brown;
-  border-color: brown;
-}
-
-.btn-secondary {
-  color: #000;
-  background-color: bisque;
-  border-color: bisque;
-}
-
-.btn-secondary:hover {
-  color: #000000;
-  background-color: tan;
-  border-color: tan;
-}
-
-.btn-secondary:not(:disabled):not(.disabled).active,
-.btn-secondary:not(:disabled):not(.disabled):active,
-.show>.btn-secondary.dropdown-toggle {
-  color: #000000;
-  background-color: tan;
-  border-color: tan;
-}
-
-.btn-secondary.focus,
-.btn-secondary:focus {
-  box-shadow: 0 0 0 0.2rem rgba(255, 228, 196, .5);
-}
-
-.btn-secondary.disabled,
-.btn-secondary:disabled {
-  color: #000;
-  background-color: bisque;
-  border-color: bisque;
-}
-
-textarea.focus,
-textarea:focus {
-  box-shadow: 0 0 0 0.2rem rgba(165, 42, 42, .5);
-}
-
-.hidden-input {
-  margin-bottom: 1em;
-}
-
-/* BEGIN STICKY FOOTER */
-html {
-  position: relative;
-  min-height: 100%;
-}
-
-body {
-  margin-bottom: 60px;
-}
-
-.footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  /* Set the fixed height of the footer here */
-  line-height: 60px;
-  /* Vertically center the text there */
-  text-align: center;
-}
-
-/* END STICKY FOOTER */
-
-/* 
-CSS FOR UNIQUE PAGES
-*/
-
-/* REGISTER/LOGIN PAGE*/
-
-.typewriter h1 {
-  overflow: hidden;
-  /* Ensures the content is not revealed until the animation */
-  /* border-right: .15rem solid orange; */
-  /* The typwriter cursor */
-  white-space: nowrap;
-  /* Keeps the content on a single line */
-  margin: 0 auto;
-  /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15rem;
-  /* Adjust as needed */
-  /* animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
-  display: inline-block; */
-  animation: typing 3.5s steps(40, end);
-}
-
-/* The typing effect */
-
-@keyframes typing {
-  from {
-    width: 0
-  }
-  to {
-    width: 100%
-  }
-}
-
-/* The typewriter cursor effect */
-
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent
-  }
-  50% {
-    border-color: orange;
-  }
-}
-
-/* DASHBOARD */
-
-.site-title {
-  -webkit-text-stroke: 1px black;
-  color: white;
-  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
-}
-
-.breadcrumb {
-  background-color: bisque;
-}
-
-.page-title {
-  font-size: 3rem;
-  margin-bottom: 2rem;
-}
-
-.book-container {
-  display: flex;
-  justify-content: space-around;
-  flex-flow: row wrap;
-}
-
-.book-card {
-  margin-bottom: 3rem;
-  width: 500px;
-}
-
-.book-spine {
-  background-image: url("../images/book-spine.png");
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
-  font-size: 1.5rem;
-  margin-bottom: .5rem;
-  padding: 0 10% 0 13%;
-  text-align: center;
-  min-height: 5rem;
-  display: flex;
-  align-items: flex-end;
-  position: relative;
-}
-
-.book-title {
-  transform: rotate(.5deg);
-  margin: 15% 0 6% 0;
-  line-height: 1.4rem;
-}
-
-/* EDIT PAGE */
-
-.chapter-entry button {
-  margin-bottom: 1rem;
-}
-
-.timestamp {
-  margin-bottom: 1rem;
-}
-
-.css-list-chapters-here {
-  /* padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 0;
-  padding-right: 0;
-  border: 1px solid black;
-  border-radius: 2px;
-  background-color: #eee;
-  text-align: center; */
-}
-
-/* .css-list-chapters-here p {
-  padding-left: 5px;
-  padding-right: 5px;
-} */
-
-/* .css-list-chapters-here input {
-  margin-right: 5px;
-} */
-
-.css-chapter-listing {
-  /* border-top: 1px solid black;
-  text-align: center; */
-  color: red;
-  cursor: pointer;
-  margin-bottom: 1rem;
-}
-
-.css-chapter-listing:hover {
-  color: maroon;
-  text-decoration: none;
-}
-
-/* .css-list-chapters-here .css-chapter-listing:last-child {
-  border-bottom: 0;
-} */
-
-.css-partial-edit-chapter button {
-  display: inline-block;
-  border-radius: 2px;
-  margin: 2px;
-}
-
-.css-edit-chapter-interface-textarea {
-  margin: 3px;
-  padding: 5px;
-  border-radius: 5px;
-  width: 100%;
-  margin: 0;
-  min-height: 150px;
-}
-
-.css-edit-chapter-interface-textarea,
-#js-edit-chapter-interface-button-save,
-#js-edit-chapter-interface-button-revert,
-#js-edit-chapter-interface-button-delete {
-  cursor: not-allowed;
-}
-
-/* *******************************************/
-
-/* TABLET */
-
-/* *******************************************/
-
-@media (min-width: 768px) and (max-width: 991px) {
-  /* .display-4 {}
-  .site-title {
-    color: orange;
-  }
-  .page-title {
-    color: orange;
-  } */
-  header.header-subpage .jumbotron {
-    padding: 0rem 0rem 1rem;
-  }
-  .display-4 {
-    font-size: 3rem;
-  }
-  .logout {
-    margin-top: 1rem;
-  }
-  .page-title {
-    font-size: 2rem;
-  }
-}
-
-/* *******************************************/
-
-/* MOBILE */
-
-/* *******************************************/
-
-@media (min-width: 1px) and (max-width: 767px) {
-  /* REGISTER/LOGIN PAGE*/
-  .typewriter h1 {
-    overflow: visible;
-    white-space: normal;
-    margin: auto;
-    letter-spacing: normal;
-    animation: none;
-  }
-
-  header.header-subpage .jumbotron {
-    padding: 0rem 0rem 1rem;
-  }
-  .display-4 {
-    font-size: 2rem;
-  }
-  .logout {
-    margin-top: 1rem;
-  }
-  .page-title {
-    font-size: 1.25rem;
-  }
-  .login-header {
-    border-top: solid gray 1px;
-    margin-top: 1em;
-    padding-top: .5em;
-  }
-}
+html,body{box-sizing:border-box;font-family:monospace,"Times New Roman",Times,serif}a{color:red}a:hover{color:maroon;text-decoration:none}.jumbotron{background-color:transparent}header.header-subpage .jumbotron{padding:1rem 2rem 4rem}header{background:url("../images/bg-crumpled-paper.jpg");background-color:bisque;position:relative}.logout{margin-top:2rem}.logout form button{background-color:bisque;padding:.5rem;border-radius:.25rem}.btn-primary{color:#fff;background-color:brown;border-color:brown}.btn-primary:hover{color:#fff;background-color:darkred;border-color:darkred}.btn-primary:not(:disabled):not(.disabled).active,.btn-primary:not(:disabled):not(.disabled):active,.show > .btn-primary.dropdown-toggle{color:#fff;background-color:darkred;border-color:darkred}.btn-primary.focus,.btn-primary:focus{box-shadow:0 0 0 .2rem rgba(165,42,42,.5)}.btn-primary.disabled,.btn-primary:disabled{color:#fff;background-color:brown;border-color:brown}.btn-secondary{color:#000;background-color:bisque;border-color:bisque}.btn-secondary:hover{color:#000;background-color:tan;border-color:tan}.btn-secondary:not(:disabled):not(.disabled).active,.btn-secondary:not(:disabled):not(.disabled):active,.show > .btn-secondary.dropdown-toggle{color:#000;background-color:tan;border-color:tan}.btn-secondary.focus,.btn-secondary:focus{box-shadow:0 0 0 .2rem rgba(255,228,196,.5)}.btn-secondary.disabled,.btn-secondary:disabled{color:#000;background-color:bisque;border-color:bisque}textarea.focus,textarea:focus{box-shadow:0 0 0 .2rem rgba(165,42,42,.5)}.hidden-input{margin-bottom:1em}html{position:relative;min-height:100%}body{margin-bottom:60px}.footer{position:absolute;bottom:0;width:100%;height:60px;line-height:60px;text-align:center}.typewriter h1{overflow:hidden;white-space:nowrap;margin:0 auto;letter-spacing:.15rem;animation:typing 3.5s steps(40, end)}@keyframes typing{from{width:0}to{width:100%}}@keyframes blink-caret{from,to{border-color:transparent}50%{border-color:orange}}.site-title{-webkit-text-stroke:1px #000;color:#fff;text-shadow:3px 3px 0 #000,-1px -1px 0 #000,1px -1px 0 #000,-1px 1px 0 #000,1px 1px 0 #000}.breadcrumb{background-color:bisque}.page-title{font-size:3rem;margin-bottom:2rem}.book-container{display:flex;justify-content:space-around;flex-flow:row wrap}.book-card{margin-bottom:3rem;width:500px}.book-spine{background-image:url("../images/book-spine.png");background-size:100% 100%;background-repeat:no-repeat;font-size:1.5rem;margin-bottom:.5rem;padding:0 10% 0 13%;text-align:center;min-height:5rem;display:flex;align-items:flex-end;position:relative}.book-title{transform:rotate(0.5deg);margin:15% 0 6% 0;line-height:1.4rem}.chapter-entry button{margin-bottom:1rem}.timestamp{margin-bottom:1rem}.css-chapter-listing{color:red;cursor:pointer;margin-bottom:1rem}.css-chapter-listing:hover{color:maroon;text-decoration:none}.css-partial-edit-chapter button{display:inline-block;border-radius:2px;margin:2px}.css-edit-chapter-interface-textarea{margin:3px;padding:5px;border-radius:5px;width:100%;margin:0;min-height:150px}.css-edit-chapter-interface-textarea,#js-edit-chapter-interface-button-save,#js-edit-chapter-interface-button-revert,#js-edit-chapter-interface-button-delete{cursor:not-allowed}@media(min-width: 768px)and (max-width: 991px){header.header-subpage .jumbotron{padding:0 0 1rem}.display-4{font-size:3rem}.logout{margin-top:1rem}.page-title{font-size:2rem}}@media(min-width: 1px)and (max-width: 767px){.typewriter h1{overflow:visible;white-space:normal;margin:auto;letter-spacing:normal;animation:none}header.header-subpage .jumbotron{padding:0 0 1rem}.display-4{font-size:2rem}.logout{margin-top:1rem}.page-title{font-size:1.25rem}.login-header{border-top:solid gray 1px;margin-top:1em;padding-top:.5em}}/*# sourceMappingURL=style.css.map */
